# GameMaker-Cpp

./: .gitignore  CMakeLists.txt  OPENGM_DATA_LOADING_ANALYSIS.md  README.md  build.bat  build_output.txt
Extractor/: Extractor.csproj  Program.cs  README.md  build.bat
native/: CMakeLists.txt
native/include/: AssetLoader.h  Audio.h  GMLTypes.h  GameEngine.h  Graphics.h  IAudio.h  IFileIO.h  IInput.h  IPlatform.h  IRenderer.h  ITimer.h  InputSDL.h  Instance.h  Layer.h  Managers.h  Object.h  Room.h  Sprite.h  VM_Executor.h  VM_Instruction.h  VM_Value.h
native/src/: AssetLoader.cpp  Audio.cpp  GMLTypes.cpp  GameEngine.cpp  Graphics.cpp  Instance.cpp  Layer.cpp  Managers.cpp  Object.cpp  Platform_SDL.cpp  Room.cpp  Sprite.cpp  VM_Executor.cpp  VM_Test.cpp  VM_Value.cpp
runtime/: CMakeLists.txt  main.cpp
scripts/: Events.js  Globals.js  LoadGame.js  Matrix.js  Unsupported.js  _GameMaker.js  runner.js  yyBackground.js  yyBuffer.js  yyBufferVertex.js  yyBuiltIn.js  yyFont.js  yyIOManager.js  yyInstance.js  yyNineSliceData.js  yyObject.js  yyParticle.js  yyRoom.js  yySequence.js  yySprite.js  yyTextureGroupInfo.js  yyTypes.js  yyVariable.js  yyVertexManager.js  yyView.js  yyWebGL.js
scripts/Builders/: yyVBufferBuilder.js
scripts/SWF/: yySWFShape.js
scripts/animation/: yySkeletonInstance.js  yySkeletonSprite.js
scripts/device/: iOS.js
scripts/functions/: Function_Collision.js  Function_D3D.js  Function_Debug.js  Function_File.js  Function_Font.js  Function_Game.js  (+23 more)
tools/: INDEX.md  README.md  TESTING_REAL_GAMES.md  TOOLSET_SUMMARY.md  demo.py  example_extract_undertale.py  extract_game.py  extractor.py  quick_start.py  requirements.txt  test_converter.py  umt_to_json_converter.py  undertale_room.json
(+4152 files in other folders)
